# minions

./: .env.example  .env.example.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  pyproject.toml
.agents/: master_plan.md  open-questions.md  progress.md
.agents/decisions/: ADR-001-language-and-tooling.md  ADR-002-cli-first-integration.md  ADR-003-investigation-as-unit.md  ADR-004-trust-via-verified-citations.md  ADR-005-read-only-by-construction.md  ADR-006-provider-abstraction.md  ADR-007-agent-integration-via-instructions-block.md  ADR-008-tool-ergonomics-for-small-models.md
.agents/findings/: 2026-07-09-environment.md  2026-07-09-gpt-oss-tool-calling.md  2026-07-10-model-comparison.md
.agents/plans/: 2026-07-09-bootstrap.md
src/minions/: __init__.py  cli.py  config.py  config_edit.py  integrate.py  report.py  service.py  trace.py  verification.py
src/minions/agent/: loop.py  prompts.py
src/minions/providers/: __init__.py  base.py  fake.py  openai_compat.py  probe.py
src/minions/tools/: __init__.py  base.py  fs.py  git.py  globmatch.py  registry.py  search.py  tree.py  workspace.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_edit.py  test_fs_tools.py  test_git_tools.py  test_globmatch.py  test_integrate.py  test_loop.py  test_openai_compat.py  test_probe.py  test_prompts.py  test_report.py  test_search_tools.py  test_trace.py  test_tree.py  test_verification.py  test_workspace.py
