[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minions"
version = "0.1.0"
description = "Trustworthy investigation minions: delegate repository investigation from frontier agents (GRU) to cheap local models, get compact evidence-verified reports back."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "ty>=0.0.58",
]

[project.scripts]
minions = "minions.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: tests that require a running model server (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "PTH",           # prefer pathlib
    "RUF",
]
